fixed fourth selection list's overflow

--- a/style.css
+++ b/style.css
@@ -147,10 +147,6 @@ p {
     top: 9px;
 }
 
-.fourthStripe .selectionList {
-    top: 10px;
-}
-
 .fifthStripe .selectionList {
     top: 5px;
 }
